[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Hazmat/hazmat/hz up left2.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Hazmat/hazmat/hz right3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up left3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Hazmat/hazmat/hz left4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up left1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up right1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Hazmat/hazmat/hz right4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Hazmat/hazmat/hz right1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up rightd4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up left4.png" type="Texture" id=14]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up right2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Hazmat/hazmat/hz right2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Hazmat/hazmat/hz up right3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down left3.png" type="Texture" id=20]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down right1.png" type="Texture" id=21]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down right2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down right3.png" type="Texture" id=24]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down left4.png" type="Texture" id=25]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down1.png" type="Texture" id=26]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down right4.png" type="Texture" id=27]
[ext_resource path="res://Assets/Hazmat/hazmat/hz left1.png" type="Texture" id=28]
[ext_resource path="res://Assets/Hazmat/hazmat/hz left2.png" type="Texture" id=29]
[ext_resource path="res://Assets/Hazmat/hazmat/hz left3.png" type="Texture" id=30]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down2.png" type="Texture" id=31]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down left2.png" type="Texture" id=32]
[ext_resource path="res://Assets/Hazmat/hazmat/hz down left1.png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 5 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 27 ) ],
"loop": true,
"name": "down_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 31 ), ExtResource( 23 ), ExtResource( 19 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 12 ) ],
"loop": true,
"name": "up_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 14 ) ],
"loop": true,
"name": "up_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 32 ), ExtResource( 20 ), ExtResource( 25 ) ],
"loop": true,
"name": "down_left",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 8 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 87, 133 )
rotation = -1.5708
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 3 )
animation = "up_left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, 5 )

[node name="upMuzzle" type="Position2D" parent="."]
position = Vector2( 8, -1 )
rotation = 1.5708
scale = Vector2( 264.761, 472.326 )

[node name="upRightMuzzle" type="Position2D" parent="."]
position = Vector2( 5, 3 )
rotation = 1.5708

[node name="rightMuzzle" type="Position2D" parent="."]
position = Vector2( 0, 8 )
rotation = 1.5708

[node name="downRightMuzzle" type="Position2D" parent="."]
position = Vector2( -4, 12 )
rotation = 1.5708

[node name="downMuzzle" type="Position2D" parent="."]
position = Vector2( -2, 8 )
rotation = 1.5708

[node name="downLeftMuzzle" type="Position2D" parent="."]
position = Vector2( -3, -3 )
rotation = 1.5708

[node name="leftMuzzle" type="Position2D" parent="."]
position = Vector2( 0, -8 )
rotation = 1.5708

[node name="upLeftMuzzle" type="Position2D" parent="."]
position = Vector2( 12, -10 )
rotation = 1.5708
scale = Vector2( 0.997643, 1.00872 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
